aws/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: l1-troubleshooting
  labels:
    name: l1-troubleshooting
    environment: production
